Fix script paths in demo website

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/base16/onedark.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
     
-    <link rel="stylesheet" href="./dist/microframe.css">
+    <link rel="stylesheet" href="./dist/microframe.min.css">
     <link rel="stylesheet" href="./demo/style.css">
 </head>
 <body>
@@ -400,7 +400,7 @@ Special thanks to <a href="https://unsplash.com/@landolakesinc">Land O'Lakes, In
 </p>
 
 <script type="module">
-	import { initMicroframe } from './dist/microframe.js';
+	import { initMicroframe } from './dist/microframe.min.js';
 	initMicroframe();
 </script>
 
